img name refresh

--- a/portfolio/folio/index.html
+++ b/portfolio/folio/index.html
@@ -38,21 +38,21 @@
 		<h1>Team</h1>
 			<div class="teamPep">
 				<div class="w1">
-					<img src="img/layer79.png" alt="">
+					<img src="img/Layer79.png" alt="">
 					<h3>Jhon Doe</h3>
 					<span>Founder & CEO</span>
 				</div>
 			</div>
 			<div class="teamPep">
 				<div class="w1">
-					<img src="img/layer80.png" alt="">
+					<img src="img/Layer80.png" alt="">
 					<h3>Jhon Deer</h3>
 					<span>Co - founder</span>
 				</div>
 			</div>
 			<div class="teamPep">
 				<div class="w1">
-					<img src="img/layer81.png" alt="">
+					<img src="img/Layer81.png" alt="">
 					<h3>Jhon Lee</h3>
 					<span>Investor</span>
 				</div>
