--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="ru">
 <head>
 	<title>Nikita Nikitin - Верстка сайтов</title>
 	<meta charset="utf-8">
