--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 		</div>
 		<div class="contact" id="cont">
 			<h3>Свяжитесь со мной я буду вам полезен и возможно стану незаменимым звеном вашей команды!</h3>
-			<div class="b1"><span class="ph"></span><a href="tel:+7(961)6089838">8 (961) 608 - 98 - 38</a></div>
+			<div class="b1"><span class="ph"></span><a href="tel:+7(961)8888888">8 (961) 888 - 88 - 88</a></div>
 			<div class="b2"><span class="ma"></span><a href="mailto:welder98@bk.ru">devupnik@bk.ru</a></div>
-			<div class="b3"><span class="so"></span><a href="https://vk.com/bombaron">https://vk.com/bombaron</a></div>
+			<div class="b3"><span class="so"></span><a href="https://vk.com/nnnnnnnn">https://vk.com/nnnnnnnn</a></div>
 		</div>
+		
 	</div>
 	<script src="js/wow.min.js"></script>
     <script>
